IaC/xpipe-sindria/xpipe-tracker/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xpipe-tracker
  name: xpipe-tracker
  namespace: xpipe-sindria
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xpipe-tracker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xpipe-tracker
    spec:
      imagePullSecrets:
      - name: sindria-dockerhub
      containers:
      - env:
        - name: JVM_MINIMUM_MEMORY
          valueFrom:
            configMapKeyRef:
              key: JVM_MINIMUM_MEMORY
              name: xpipe-tracker-config
        - name: JVM_MAXIMUM_MEMORY
          valueFrom:
            configMapKeyRef:
              key: JVM_MAXIMUM_MEMORY
              name: xpipe-tracker-config
        - name: JVM_RESERVED_CODE_CACHE_SIZE
          valueFrom:
            configMapKeyRef:
              key: JVM_RESERVED_CODE_CACHE_SIZE
              name: xpipe-tracker-config
#        - name: ATL_DB_DRIVER
#          valueFrom:
#            configMapKeyRef:
#              key: ATL_DB_DRIVER
#              name: xpipe-tracker-config
#        - name: ATL_DB_TYPE
#          valueFrom:
#            configMapKeyRef:
#              key: ATL_DB_TYPE
#              name: xpipe-tracker-config
#        - name: ATL_DB_SCHEMA_NAME
#          valueFrom:
#            configMapKeyRef:
#              key: ATL_DB_SCHEMA_NAME
#              name: xpipe-tracker-config
#        - name: ATL_PROXY_NAME
#          valueFrom:
#            configMapKeyRef:
#              key: ATL_PROXY_NAME
#              name: xpipe-tracker-config
#        - name: ATL_JDBC_URL
#          valueFrom:
#            secretKeyRef:
#              key: ATL_JDBC_URL
#              name: xpipe-tracker-secret
#        - name: ATL_JDBC_USER
#          valueFrom:
#            secretKeyRef:
#              key: ATL_JDBC_USER
#              name: xpipe-tracker-secret
#        - name: ATL_JDBC_PASSWORD
#          valueFrom:
#            secretKeyRef:
#              key: ATL_JDBC_PASSWORD
#              name: xpipe-tracker-secret
        image: atlassian/jira-software:latest
        imagePullPolicy: Always
        #securityContext:
        #  capabilities:
        #    add:
        #      - NET_ADMIN
        #livenessProbe:
        #  failureThreshold: 3
        #  httpGet:
        #    path: /afc/channelactivity/actuator/health
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 50
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        name: xpipe-tracker
        ports:
        - containerPort: 8080
          protocol: TCP
        #readinessProbe:
        #  failureThreshold: 3
        #  httpGet:
        #    path: /afc/channelactivity/actuator/health
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 20
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        resources:
          limits:
            memory: 2048Mi
          requests:
            memory: 2048Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        #volumeMounts:
        #- mountPath: /var/atlassian/application-data/jira
        #  name: xpipe-tracker-data-volume
      dnsPolicy: ClusterFirst
      #hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      #volumes:
      #- name: xpipe-tracker-data-volume
      #  persistentVolumeClaim:
      #    claimName: xpipe-tracker-data-pvc
      #    #defaultMode: 420
---
