IaC/xpipe-sindria/xpipe-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpipe-tracker
  namespace: xpipe-sindria
  labels:
    app: xpipe-tracker
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-body-size: "8g"
  #  nginx.org/client-max-body-size: "8g"
  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: sindria-tracker-xpipe.sindria.org
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: xpipe-tracker
              port:
                number: 8080
  tls:
  - hosts:
    - sindria-tracker-xpipe.sindria.org
    secretName: tls-sindriaorg
